plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
	implementation 'com.h2database:h2'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Apache POI для работы с Excel
	implementation 'org.apache.poi:poi:5.2.3'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Apache POI для работы с PDF
	implementation 'org.apache.pdfbox:pdfbox:2.0.27'
	// Для генерации PDF (iText 7)
	implementation 'com.itextpdf:itext7-core:7.2.5'

	//Тестирование
	testImplementation 'org.mockito:mockito-inline:5.2.0' // Вместо mockito-core
	testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
	testImplementation 'org.hsqldb:hsqldb:2.7.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('compileJava') {
	options.compilerArgs += ['-parameters']
}

//АЛЛА
test {
	// Добавьте JVM аргументы для Mockito
	jvmArgs "-javaagent:${classpath.find { it.name.contains("byte-buddy-agent") }.absolutePath}"

	// Альтернативный вариант (для новых версий Mockito)
	jvmArgs "-Djdk.attach.allowAttachSelf=true"
}

tasks.withType(Test) {
	jvmArgs '-Xshare:off'
}